--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "The Viserio Events Contract package.",
     "keywords": [
         "abstractions",
-        "contracts",
+        "Contract",
         "decoupling",
         "interfaces",
         "interoperability",
